[mojo] Make failure to init more obvious

Currently when you try using Mojo without first initializing it
properly, you get an error message about the function not being
supported in "this version" of Mojo Core. This is marginally better
than a cryptic crash stack, but still misleading.

This CL detects when a missing function is due to a lack of Mojo
initialization and reports it as such.

Bug: 682732
Change-Id: Ia3f057171f2387a0387a7547a1a55fcc413cf7c0
Reviewed-on: https://chromium-review.googlesource.com/c/1337813
Reviewed-by: Oksana Zhuravlova <oksamyt@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/master@{#608503}
Former-commit-id: 04708acfc91c7572318793a878d8954b2237c9aa