mojo/public/c/system/thunks.cc
@@ -36,24 +36,26 @@ base::ProtectedMemory<MojoGetSystemThunksFunction> g_get_thunks;
 PROTECTED_MEMORY_SECTION base::ProtectedMemory<MojoSystemThunks> g_thunks;
 
 MojoResult NotImplemented(const char* name) {
-  DLOG(ERROR) << "Function 'Mojo" << name
-              << "()' not supported in this version of Mojo Core.";
+  if (g_thunks->size > 0) {
+    DLOG(ERROR) << "Function 'Mojo" << name
+                << "()' not supported in this version of Mojo Core.";
+    return MOJO_RESULT_UNIMPLEMENTED;
+  }
+
+  LOG(FATAL)
+      << "Mojo has not been initialized in this process. You must call "
+      << "either mojo::core::Init() as an embedder, or |MojoInitialize()| if "
+      << "using the mojo_core shared library.";
   return MOJO_RESULT_UNIMPLEMENTED;
 }
 
 }  // namespace
 
-// Macro to verify that the thunk symbol |name| is actually present in the
-// runtime version of Mojo Core that is currently in use.
-#define FUNCTION_IS_IMPLEMENTED(name)                                       \
-  (reinterpret_cast<uintptr_t>(static_cast<const void*>(&g_thunks->name)) - \
-       reinterpret_cast<uintptr_t>(static_cast<const void*>(&g_thunks)) <   \
-   g_thunks->size)
-
-#define INVOKE_THUNK(name, ...)                                              \
-  FUNCTION_IS_IMPLEMENTED(name)                                              \
-  ? base::UnsanitizedCfiCall(g_thunks, &MojoSystemThunks::name)(__VA_ARGS__) \
-  : NotImplemented(#name)
+#define INVOKE_THUNK(name, ...)                                        \
+  offsetof(MojoSystemThunks, name) < g_thunks->size                    \
+      ? base::UnsanitizedCfiCall(g_thunks,                             \
+                                 &MojoSystemThunks::name)(__VA_ARGS__) \
+      : NotImplemented(#name)
 
 namespace mojo {
 
